--- a/app/src/main/res/layout/layout_particular.xml
+++ b/app/src/main/res/layout/layout_particular.xml
@@ -7,5 +7,5 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="zoy articulá" />
+        android:text="zoy particulá" />
 </LinearLayout>
